# kopano-core

./: .astylerc  .clang-format  .clang_complete  .dockerignore  .editorconfig  .gitignore  .pylintrc  CONTRIBUTING.md  Code_structure.md  Database_structure.md  Dockerfile.build  Jenkinsfile  LICENSE.txt  Makefile.am  README.md  RELNOTES.txt  bootstrap.sh  configure.ac  cppcheck.suppressions  default.sym.in  global.am  lddcheck  pwdcheck.sh  versionheader.sh
ECtools/: Makefile.am  dbadm.cpp  eidprint.cpp  hx-time.c  hx-time.h  ibrule.cpp  idx_handler.cpp  idx_net.cpp  idx_plugin.hpp  idx_util.cpp  idx_util.hpp  idx_xapian.cpp  indexer.hpp  mapitime.cpp  oof.cpp  rtfcomp.cpp  scriptrun.cpp  srvadm.cpp  statsd.cpp  storeadm.cpp  vcfimport.cpp
caldav/: CalDAV.cpp  CalDavProto.cpp  CalDavProto.h  CalDavUtil.cpp  CalDavUtil.h  Http.cpp  Http.h  Makefile.am  ProtocolBase.cpp  ProtocolBase.h  WebDav.cpp  WebDav.h  iCal.cpp  iCal.h
common/: ConsoleTable.cpp  ConsoleTable.h  ECABEntryID.cpp  ECACL.cpp  ECACL.h  ECCache.cpp  ECCache.h  ECChannel.cpp  ECChannelClient.cpp  ECChannelClient.h  ECConfig.cpp  ECConfigImpl.cpp  ECConfigImpl.h  ECDatabaseMySQL.cpp  ECDatabaseMySQL.h  ECDebug.cpp  ECDebugPrint.cpp  ECFifoBuffer.cpp  ECFifoBuffer.h  ECFifoStream.cpp  ECFifoStream.h  ECGetText.cpp  ECGuid.cpp  ECIConv.cpp  ECKeyTable.cpp  ECLogger.cpp  ECMemStream.cpp  ECMemStream.h  ECScheduler.cpp  ECSerializer.cpp  ECSerializer.h  ECThreadPool.cpp  ECUnknown.cpp  HtmlEntity.cpp  HtmlEntity.h  HtmlToTextParser.cpp  HtmlToTextParser.h  IStreamAdapter.cpp  IStreamAdapter.h  MAPIErrors.cpp  (+38 more)
doc/: Code_structure.md  Database_structure.md  Makefile.am  adminssl.txt  classes.gv  coredump.txt  extract_user.txt  hl.txt  id.txt  install.txt  kopano-admin.8  kopano-admin.cfg.5  kopano-archiver-aclset.8  kopano-archiver-aclsync.8  kopano-archiver-restore.8  kopano-archiver.8  kopano-archiver.cfg.5  kopano-autorespond.8  kopano-autorespond.py.8  kopano-backup.8  kopano-backup.cfg.5  kopano-cachestat.8  kopano-cfgchecker.8  kopano-cli.8  kopano-coredump.5  kopano-dagent.8  kopano-dagent.cfg.5  kopano-dbadm.8  kopano-fsck.1  kopano-gateway.8  kopano-gateway.cfg.5  kopano-ibrule.1  kopano-ical.8  kopano-ical.cfg.5  kopano-indexd.8  kopano-ldap.cfg.5  kopano-mailbox-permissions.8  kopano-migration-pst.8  kopano-migration-pst.cfg.5  kopano-monitor.8  (+35 more)
gateway/: ClientProto.h  Gateway.cpp  IMAP.cpp  IMAP.h  Makefile.am  POP3.cpp  POP3.h  doveauth.cpp  doveauth.h  doveauth.sym.in  doveauth1.c  dovestore.cpp  dovestore.h  dovestore.sym.in  dovestore1.c
inetmapi/: ECMapiUtils.cpp  ECMapiUtils.h  ECVMIMEUtils.cpp  ECVMIMEUtils.h  MAPISMTPTransport.cpp  MAPISMTPTransport.h  MAPIToVMIME.cpp  MAPIToVMIME.h  Makefile.am  ReadMe.txt  SMIMEMessage.cpp  SMIMEMessage.h  VMIMEToMAPI.cpp  VMIMEToMAPI.h  inetmapi.cpp  inputStreamMAPIAdapter.cpp  inputStreamMAPIAdapter.h  mapiAttachment.cpp  mapiAttachment.h  mapiTextPart.cpp  mapiTextPart.h  outputStreamMAPIAdapter.cpp  outputStreamMAPIAdapter.h  serviceRegistration.inl  test.mk  tnef.cpp  tnef.h
installer/: Makefile.am  cxx11.cpp
libfreebusy/: ECEnumFBBlock.cpp  ECEnumFBBlock.h  ECFBBlockList.cpp  ECFBBlockList.h  ECFreeBusyData.cpp  ECFreeBusyData.h  ECFreeBusySupport.cpp  ECFreeBusySupport.h  ECFreeBusyUpdate.cpp  ECFreeBusyUpdate.h  Makefile.am  PublishFreeBusy.cpp  PublishFreeBusy.h  freebusy.h  freebusyguid.h  freebusytags.h  freebusyutil.cpp  freebusyutil.h  recurrence.cpp  recurrence.h
libicalmapi/: ICalToMAPI.cpp  ICalToMAPI.h  MAPIToICal.cpp  MAPIToICal.h  MAPIToVCF.cpp  MAPIToVCF.h  Makefile.am  VCFToMAPI.cpp  VCFToMAPI.h  icalcompat.hpp  icalinit.cpp  icalitem.h  icalmapi.h  icalmem.hpp  icalrecurrence.cpp  icalrecurrence.h  icaluid.cpp  icaluid.h  mapitovcf.cpp  mapitovcf.hpp  nameids.cpp  nameids.h  valarm.cpp  valarm.h  vcftomapi.cpp  vcftomapi.hpp  vconverter.cpp  vconverter.h  vevent.cpp  vevent.h  vfreebusy.cpp  vfreebusy.h  vtimezone.cpp  vtimezone.h  vtodo.cpp  vtodo.h
libsync/: ECLibSync.h  ECOfflineABImporter.cpp  ECOfflineABImporter.h  ECResyncSet.cpp  ECResyncSet.h  ECSync.cpp  ECSync.h  ECSyncContext.cpp  ECSyncContext.h  ECSyncLog.cpp  ECSyncLog.h  ECSyncSettings.cpp  ECSyncSettings.h  ECSyncUtil.cpp  ECSyncUtil.h  Makefile.am
m4lcommon/: CommonUtil.cpp  ECFeatureList.h  ECFeatures.cpp  ECFeatures.h  ECInvariantChecker.h  ECIterators.cpp  ECIterators.h  ECMAPIDebug.cpp  ECMAPIDebug.h  ECMemTable.cpp  ECRestriction.cpp  HrException.h  IECChangeAdviseSink.h  IECChangeAdvisor.h  IECExchangeModifyTable.h  IECExportAddressbookChanges.h  IECExportChanges.h  IECImportAddressbookChanges.h  IECImportContentsChanges.h  IECImportHierarchyChanges.h  IECMultiStoreTable.h  IECSpooler.h  IECTestProtocol.h  IMAPIOffline.h  MAPIConsoleTable.cpp  MAPIConsoleTable.h  MAPINotifSink.cpp  MAPINotifSink.h  Makefile.am  RecurrenceState.cpp  Util.cpp  favoritesutil.cpp  favoritesutil.h  mapicontact.h  mapilicense.cpp  userutil.cpp
php-ext/: ECImportContentsChangesProxy.cpp  ECImportContentsChangesProxy.h  ECImportHierarchyChangesProxy.cpp  ECImportHierarchyChangesProxy.h  ECRulesTableProxy.cpp  ECRulesTableProxy.h  Makefile.am  README.md  globals.h  main.cpp  main.h  mapi.ini  mapi.sym  phparginfo.h  phpconfig.h  typeconversion.cpp  typeconversion.h  util.cpp  util.h
php7-ext/: ECImportContentsChangesProxy.cpp  ECImportContentsChangesProxy.h  ECImportHierarchyChangesProxy.cpp  ECImportHierarchyChangesProxy.h  ECRulesTableProxy.cpp  ECRulesTableProxy.h  Makefile.am  globals.h  group.py  main.cpp  main.h  typeconversion.cpp  typeconversion.h  util.cpp  util.h
po/: Makefile.am  bg.po  ca.po  cs.po  da.po  de.po  el.po  es.po  et.po  fa.po  fi.po  fr.po  fr_BE.po  gl.po  he.po  hr.po  hu.po  it.po  ja.po  ko.po  lt.po  messages.pot  mkpot  nb.po  nl.po  nl_BE.po  pl.po  pt.po  pt_BR.po  ru.po  sl.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
provider/: Makefile.am  libkcserver.sym.in  libkcsoap.sym.in  plugin.sym.in  provider.sym.in
spooler/: DAgent.cpp  LMTP.cpp  LMTP.h  Makefile.am  PyMapiPlugin.cpp  PyMapiPlugin.h  Spooler.cpp  archive.cpp  archive.h  mailer.cpp  (+7 more)
(+1885 files in other folders)
